--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <div class="hero-content" data-aos="fade-up">
       <h1>Your Property, Our Priority</h1>
       <p>Skilled technicians. Reliable service. On time, every time.</p>
+      <p>Complete Home & Property Maintenance Solutions.</p>
       <button class="btn-primary" onclick="location.href='#contact'">Request a Quote</button>
     </div>
   </section>
@@ -109,7 +110,7 @@
       <div class="service-card" data-aos="fade-up" data-aos-delay="800"><div class="icon">📺</div><div class="title">Appliances</div></div>
       <div class="service-card" data-aos="fade-up" data-aos-delay="900"><div class="icon">🔨</div><div class="title">Remodeling</div></div>
       <div class="service-card" data-aos="fade-up" data-aos-delay="1000"><div class="icon">🏠</div><div class="title">Roofing</div></div>
-      <div class "service-card" data-aos="fade-up" data-aos-delay="1100"><div class="icon">🚪</div><div class="title">Doors</div></div>
+      <div class="service-card" data-aos="fade-up" data-aos-delay="1100"><div class="icon">🚪</div><div class="title">Doors</div></div>
     </div>
   </section>
 
@@ -126,8 +127,9 @@
   <section class="section about" id="about">
     <h2 data-aos="fade-up">About Us</h2>
     <p data-aos="fade-up" data-aos-delay="100">
-      True Care Solutions LLC is a registered company in the USA. We connect skilled technicians with projects across the country. Residential & commercial clients count on us for reliable, high-quality results.
-    </p>
+       True care solutions LLC is a professional property services company offering high-quality,
+        affordable maintenance services for homes and businesses. Our trained, insured team
+        is passionate about delivering dependable solutions and ensuring customer satisfaction.</p>
     <p data-aos="fade-up" data-aos-delay="200">
       Address: 30 N Gould St Ste N, Sheridan, WY 82801 <br />
       Email: <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a> <br />
@@ -146,6 +148,8 @@
         <button type="submit">Send Message</button>
       </div>
       <div class="contact-info" data-aos="fade-up" data-aos-delay="200">
+        <p><strong>True care solutions LLC</p>
+        <p><strong>Phone:(469)210-2710</p>
         <p><strong>Email:</strong> <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a></p>
         <p><strong>Address:</strong> 30 N Gould St Ste N, Sheridan, WY 82801</p>
       </div>
