--- a/index.html
+++ b/index.html
@@ -124,17 +124,37 @@
     </div>
   </section>
 
-  <section class="section about" id="about">
-    <h2 data-aos="fade-up">About Us</h2>
-    <p data-aos="fade-up" data-aos-delay="100">
-       True care solutions LLC is a professional property services company offering high-quality,
+
+   <section id="about" class="section">
+    <div class="container" data-aos="fade-up">
+      <h2>Who We Are</h2>
+      <p>
+        True care solutions LLC is a professional property services company offering high-quality,
         affordable maintenance services for homes and businesses. Our trained, insured team
-        is passionate about delivering dependable solutions and ensuring customer satisfaction.</p>
-    <p data-aos="fade-up" data-aos-delay="200">
-      Address: 30 N Gould St Ste N, Sheridan, WY 82801 <br />
-      Email: <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a> <br />
-      Website: <a href="https://truecaresolutions.in">truecaresolutions.in</a>
-    </p>
+        is passionate about delivering dependable solutions and ensuring customer satisfaction.
+      </p>
+    </div>
+  </section>
+
+  
+  <section id="contact" class="section light">
+    <div class="container" data-aos="fade-up">
+      <h2>Contact Us</h2>
+      <p>True care solutions LLC</p>
+      <p>Email: service@truecaresolutions.in</p>
+      <p>Phone: +1 469-210-2710</p>
+      <p>Address: 30 N Gould St Ste N, Sheridan, WY 82801</p>
+      <form id="contactForm" action="https://formspree.io/f/moqzbqya" method="POST" class="contact-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="_replyto" required />
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+      <p id="formResponse" class="form-response"></p>
+    </div>
   </section>
 
   <section class="section" id="contact">
