--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <h2 data-animate="fade-up" data-delay="100">Our Mission</h2>
       <p data-animate="fade-up" data-delay="150">Provide fast, reliable property maintenance with transparent pricing and courteous service.</p>
       <h2 data-animate="fade-up" data-delay="200">Service Area</h2>
-      <p data-animate="fade-up" data-delay="250">Sheridan, WY and surrounding areas.</p>
+      <p data-animate="fade-up" data-delay="250">TX, CA ,FL areas.</p>
     </div>
   </section>
 </main>
