--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </div>
         <div class="card" data-animate="fade-up" data-delay="150">
           <h3>Request a Quote</h3>
-          <form id="contactForm" action="https://formspree.io/f/moqzbqya" method="POST" class="contact-form">
+          <form id="contactForm" action="https://formspree.io/f/mpwyjeby" method="POST" class="contact-form">
             <label for="name">Name</label>
             <input id="name" name="name" required>
             <label for="phone">Phone</label>
