--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
       <div class="grid contact-grid">
         <div class="card" data-animate="fade-up" data-delay="100">
           <h3>Get in touch</h3>
-          <p>Phone: <a href="tel:+14692102710">469-210-2710</a></p>
-          <p>Email: <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a></p>
-          <p>Address: 30 N Gould St Ste N, Sheridan, WY 82801</p>
+          <p>📞Phone: <a href="tel:+14692102710">469-210-2710</a></p>
+          <p>✉️Email: <a href="mailto:service@truecaresolutions.in">service@truecaresolutions.in</a></p>
+          <p>📍Address: 30 N Gould St Ste N, Sheridan, WY 82801</p>
         </div>
         <div class="card" data-animate="fade-up" data-delay="150">
           <h3>Request a Quote</h3>
